<resources>
    <!-- Titles -->
    <string name="app_name">MixBay</string>
    <string name="title_activity_settings">Paramètres</string>
    <string name="algorithm">Algorithme</string>
    <string name="users">Utilisateurs</string>

    <!-- Alert titles -->
    <string name="error_title">Erreur</string>
    <string name="add_user_alert_title">Identifiant de l\'utilisateur</string>
    <string name="remove_user_alert_title">Supprimer %1$s ?</string>
    <string name="choose_algo_alert_title">Quel algorithme choisir ?</string>
    <string name="current_user_alert_title">Qui est l\'utilisateur courant ?</string>

    <!-- Buttons -->
    <string name="mix_playlist">MIX</string>
    <string name="connect_with_spotify">Connect with Spotify</string>
    <string name="connect_with_deezer">Connect with Deezer</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="mute">Désactiver</string>
    <string name="unmute">Activer</string>
    <string name="delete">Supprimer</string>
    <string name="OK">OK</string>
    <string name="accept">Accepter</string>
    <string name="cancel">Annuler</string>

    <!-- Error messages -->
    <string name="invalid_user_id">L\'utilisateur n\'existe pas.</string>
    <string name="user_already_added">L\'utilisateur a déjà été ajouté.</string>
    <string name="invalid_playlist_id">La playlist n\'existe pas.</string>
    <string name="api_request_error">Une erreur est survenue, veuillez réessayer ultérieurement.</string>
    <string name="playlist_empty_error">La playlist générée est vide. Les utilisateurs connectés n\'ont pas de playlist publique.</string>

    <!-- Alert messages -->
    <string name="remove_user_message">Voulez vous vraiment supprimer cet utilisateur ?</string>

    <!-- Algorithm list -->
    <string name="algo_least_misery">Least Misery</string>
    <string name="algo_fairness">Fairness</string>
    <string name="algo_most_pleasure">Most Pleasure</string>
    <string name="algo_random">Random</string>

    <!-- Spotify exception messages -->
    <string name="spotify_not_installed">Veuillez installer Spotify pour pouvoir utiliser l\'application.</string>
    <string name="spotify_not_updated">Veuillez mettre à jour l’application Spotify.</string>
    <string name="spotify_app_not_authorized">Vous n’avez pas autorisé l’application à contrôler votre musique à distance.\n
        Veuillez relancer l’application et accepter pour que celle-ci fonctionne.</string>
    <string name="spotify_not_connected">Veuillez vous connecter à Spotify.</string>
    <string name="spotify_offline">Spotify est en offline, veuillez passer l’application en ligne.</string>
    <string name="spotify_closed">Il semblerait que l\'application Spotify soit fermée, veuillez la rouvrir.</string>

    <string name="pipe_char">|</string>
    <string name="descr_more_button">Bouton d\'options</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="disconnection">Déconnexion de l\'application</string>
    <string name="advanced_param">Paramètres avancés</string>
</resources>
