<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Toolbar
        android:id="@+id/settingsToolbar"
        android:title="@string/title_activity_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize" />

    <LinearLayout
        android:id="@+id/settingsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settingsToolbar"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/algorithm"
                android:textSize="15sp"
                android:textColor="@android:color/holo_blue_dark"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:onClick="onClickSelectAlgorithm">

                <TextView
                    android:text="@string/algorithm"
                    android:id="@+id/algoritmTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_weight="1" />

                <TextView
                    android:text="Not set"
                    android:id="@+id/chosenAlgorithmTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/secondary_text_dark"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/users"
                android:textSize="15sp"
                android:textColor="@android:color/holo_blue_dark"/>

            <ListView
                android:id="@+id/userListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Paramètres avancés"
                android:textSize="15sp"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:id="@+id/disconnectTextView"
                android:text="Déconnexion de l'application"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:layout_weight="1"
                android:textColor="@android:color/holo_red_light"
                android:onClick="onClickDisconnect"/>

        </LinearLayout>

        </LinearLayout>

</RelativeLayout>